--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 application.service-bus.connection-string=${azure.connection.string}
-application.service-bus.class-b.topic=topic-out
-application.service-bus.class-a.subscription=topic-in-subscription
-application.service-bus.class-a.topic=topic-in
+application.service-bus.class-b.topic=quarkus_test_out
+application.service-bus.class-a.subscription=quarkus_consumer
+application.service-bus.class-a.topic=quarkus_test
+
+quarkus.log.category."com.azure.messaging.servicebus".level=WARN
+quarkus.log.category."com.azure.core.amqp".level=WARN
